fix create component responsivness on mobile. Promise link now clearly visible. Add ability to easily copy promise link

--- a/src/app/modules/home/components/create/create.component.scss
+++ b/src/app/modules/home/components/create/create.component.scss
@@ -130,6 +130,12 @@ hr {
     }
 }
 
+@media (max-width: 625px) {
+    .sbt-container {
+        flex-direction: column;
+    }
+}
+
 @media (max-width: 720px) {
     .radio-container {
         flex-direction: column;
